--- a/index.html
+++ b/index.html
@@ -56,17 +56,17 @@
 
     <div class="counter">
         <div class="box">
-            <span>2+</span>
-            <h3>years of experience</h3>
+            <span>Iam a</span>
+            <h3>Fresher</h3>
         </div>
 
         <div class="box">
-            <span>100+</span>
+            <span>5+</span>
             <h3>projects completed</h3>
         </div>
 
         <div class="box">
-            <span>10+</span>
+            <span>5+</span>
             <h3>certificates</h3>
         </div>
 
