--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
         </div>
         
         <div class="box">
-          <a  href="clock.html"> <img src="clock.avif" alt="" ></a>
+          <a  href="clock.html"> <img src="clock.jpg" alt="" ></a>
         </div>
 
         <div class="box">
